force-app/main/default/objects/Case/fields/Case_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Sequence_Number__c</fullName>
    <inlineHelpText>Case Sequence Number for sending feedback to customer every 15th case.</inlineHelpText>
    <label>Case Sequence Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>