force-app/main/default/objects/Case/fields/Case_Summary_Title__c.field-meta.xml
<CustomField>
    <fullName>Case_Summary_Title__c</fullName>
    <formula>CaseNumber  &amp; &apos; - &apos; &amp;  Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Summary Title</label>
    <type>Text</type>
</CustomField>