force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Complicated</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>