force-app/main/default/objects/Case/fields/Count_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Count_Comparison__c</fullName>
    <label>Count Comparison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stagging Records not Matched</fullName>
            </value>
            <value>
                <fullName>Sharepoint Records not Matched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>