force-app/main/default/objects/Case/fields/Created_Date_Status_Checker__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Status_Checker__c</fullName>
    <formula>IF(
   ISPICKVAL(Status, &apos;Closed&apos;),
   true,
   false
)




/*
IF(
   ISPICKVAL(Status, &apos;Closed&apos;) &amp;&amp;  ClosedDate &lt;= DATETIMEVALUE(&quot;2024-05-25 17:00:00&quot;),
   true,
   false
)
*/
/*2014-05-15T23:59:59Z*/</formula>
    <label>Created Date &amp; Status Checker</label>
    <type>Checkbox</type>
</CustomField>