force-app/main/default/objects/Case/fields/Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close__c</fullName>
    <formula>ClosedDate  -  CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>