force-app/main/default/objects/Case/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>HRC</fullName>
            </value>
            <value>
                <fullName>ITD</fullName>
            </value>
            <value>
                <fullName>EXE</fullName>
            </value>
            <value>
                <fullName>WCD</fullName>
            </value>
            <value>
                <fullName>BEN</fullName>
            </value>
            <value>
                <fullName>PAY</fullName>
            </value>
            <value>
                <fullName>SLS</fullName>
            </value>
            <value>
                <fullName>MKT</fullName>
            </value>
            <value>
                <fullName>IMP</fullName>
            </value>
            <value>
                <fullName>GRN</fullName>
            </value>
            <value>
                <fullName>ACT</fullName>
            </value>
            <value>
                <fullName>TAX</fullName>
            </value>
            <value>
                <fullName>LGL</fullName>
            </value>
            <value>
                <fullName>HRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>