force-app/main/default/objects/Case/fields/Empoyee_Member__c.field-meta.xml
<CustomField>
    <fullName>Empoyee_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter the employee this case impacts.  This field is used by benefits.</inlineHelpText>
    <label>Employee Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Member Affected)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>