force-app/main/default/objects/Case/fields/Failed_Record__c.field-meta.xml
<CustomField>
    <fullName>Failed_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed Record</label>
    <type>Checkbox</type>
</CustomField>