force-app/main/default/objects/Case/fields/have_more_character__c.field-meta.xml
<CustomField>
    <fullName>have_more_character__c</fullName>
    <defaultValue>false</defaultValue>
    <label>have more character</label>
    <type>Checkbox</type>
</CustomField>