force-app/main/default/objects/Case/fields/Issue_with__c.field-meta.xml
<CustomField>
    <fullName>Issue_with__c</fullName>
    <label>Issue with</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>