force-app/main/default/objects/Case/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specify the employee who this case is about if different from the contact</inlineHelpText>
    <label>Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>