force-app/main/default/objects/Case/fields/New_Case__c.field-meta.xml
<CustomField>
    <fullName>New_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Case?</label>
    <type>Checkbox</type>
</CustomField>