force-app/main/default/objects/Case/fields/No_Account_on_Case__c.field-meta.xml
<CustomField>
    <fullName>No_Account_on_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Account on Case</label>
    <type>Checkbox</type>
</CustomField>