force-app/main/default/objects/Case/fields/No_of_days__c.field-meta.xml
<CustomField>
    <fullName>No_of_days__c</fullName>
    <formula>TODAY()-DATEVALUE(Closed_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>