force-app/main/default/objects/Case/fields/No_of_times_closed__c.field-meta.xml
<CustomField>
    <fullName>No_of_times_closed__c</fullName>
    <label>No of times closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>