force-app/main/default/objects/Case/fields/One_Hour_Since_Closed__c.field-meta.xml
<CustomField>
    <fullName>One_Hour_Since_Closed__c</fullName>
    <description>The field helps to check if the case has been closed and if it more than 60 minutes, it is true.</description>
    <formula>ABS((NOW() - ClosedDate) * 1440) &gt; 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One Hour Since Closed</label>
    <type>Checkbox</type>
</CustomField>