force-app/main/default/objects/Case/fields/Processed_Record__c.field-meta.xml
<CustomField>
    <fullName>Processed_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed Record</label>
    <type>Checkbox</type>
</CustomField>