force-app/main/default/objects/Case/fields/Send_Survey_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Survey_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox determines if the case is closed at least once.</inlineHelpText>
    <label>Case closed?</label>
    <type>Checkbox</type>
</CustomField>