force-app/main/default/objects/Case/fields/Send_Survey_Email_Again__c.field-meta.xml
<CustomField>
    <fullName>Send_Survey_Email_Again__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox determines if the survey is sent. This checkbox automatically unchecks after 5 minutes if the end user wants to trigger the survey again.</inlineHelpText>
    <label>Send Survey Email</label>
    <type>Checkbox</type>
</CustomField>