force-app/main/default/objects/Case/fields/Send_Survey_Email_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Send_Survey_Email_ReadOnly__c</fullName>
    <formula>Send_Survey_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This checkbox determines if the case is closed at least once</inlineHelpText>
    <label>Case closed?</label>
    <type>Checkbox</type>
</CustomField>