force-app/main/default/objects/Case/fields/SuppliedNameTest__c.field-meta.xml
<CustomField>
    <fullName>SuppliedNameTest__c</fullName>
    <formula>SuppliedName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SuppliedNameTest</label>
    <type>Text</type>
</CustomField>