force-app/main/default/objects/Case/fields/Support_Area__c.field-meta.xml
<CustomField>
    <fullName>Support_Area__c</fullName>
    <label>Support Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Garnishments</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>WC</fullName>
            </value>
            <value>
                <fullName>W2</fullName>
            </value>
            <value>
                <fullName>Unemployment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>