force-app/main/default/objects/Case/fields/Support_Category__c.field-meta.xml
<CustomField>
    <fullName>Support_Category__c</fullName>
    <label>Support Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Support_Area__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>401K</fullName>
            </value>
            <value>
                <fullName>ACA</fullName>
            </value>
            <value>
                <fullName>Cards</fullName>
            </value>
            <value>
                <fullName>Claims</fullName>
            </value>
            <value>
                <fullName>COBRA</fullName>
            </value>
            <value>
                <fullName>Deductions</fullName>
            </value>
            <value>
                <fullName>DNet</fullName>
            </value>
            <value>
                <fullName>Enrollments</fullName>
            </value>
            <value>
                <fullName>FMLA</fullName>
            </value>
            <value>
                <fullName>FSA</fullName>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>Medical Support Orders</fullName>
            </value>
            <value>
                <fullName>Open Enrollment</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>STD</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>Recapture</fullName>
            </value>
            <value>
                <fullName>AFLAC</fullName>
            </value>
            <value>
                <fullName>New Hire Enrollment Packet</fullName>
            </value>
            <value>
                <fullName>Direct Deposit</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Login Credentials</fullName>
            </value>
            <value>
                <fullName>Pay Inquiries</fullName>
            </value>
            <value>
                <fullName>Pay Stubs</fullName>
            </value>
            <value>
                <fullName>Pay Card</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>EE Tax Withholdings</fullName>
            </value>
            <value>
                <fullName>ER Tax Notice</fullName>
            </value>
            <value>
                <fullName>Communications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>