force-app/main/default/objects/Case/fields/Survey_Email_Bounced_ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Survey_Email_Bounced_ReadOnly__c</fullName>
    <formula>Survey_Email_Bounced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Email Bounced</label>
    <type>Checkbox</type>
</CustomField>