force-app/main/default/objects/Case/fields/ThreadId__c.field-meta.xml
<CustomField>
    <fullName>ThreadId__c</fullName>
    <label>ThreadId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>