force-app/main/default/objects/Case/fields/Time_With_Customer__c.field-meta.xml
<CustomField>
    <fullName>Time_With_Customer__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The time in business hours that this case spent in the hands of the customer.</description>
    <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
    <label>Time With Customer</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>