force-app/main/default/objects/Case/fields/Time_With_Support__c.field-meta.xml
<CustomField>
    <fullName>Time_With_Support__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The time in business hours that this case spent with support.</description>
    <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
    <label>Time With Support</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>