force-app/main/default/objects/Case/fields/To_Be_Archived__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Be Archived</label>
    <type>Checkbox</type>
</CustomField>