force-app/main/default/objects/Case/fields/Unread_Emails__c.field-meta.xml
<CustomField>
    <fullName>Unread_Emails__c</fullName>
    <label>Unread Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>