force-app/main/default/objects/Case/fields/Validation_Test__c.field-meta.xml
<CustomField>
    <fullName>Validation_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validation Test</label>
    <type>Checkbox</type>
</CustomField>