force-app/main/default/objects/Case/validationRules/No_Transfer_to_IT.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Transfer_to_IT</fullName>
    <active>false</active>
    <description>Prevent users from assigning cases to members of the IT department.</description>
    <errorConditionFormula>Owner:User.Department = &apos;IT&apos;</errorConditionFormula>
    <errorMessage>You may not assign a case to a user in the IT department. Please select a different queue or user if you wish to reassign this case, or consult your manager for guidance.</errorMessage>
</ValidationRule>