force-app/main/default/objects/Case/validationRules/Require_Account_Close_Reason_on_Close.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Account_Close_Reason_on_Close</fullName>
    <active>true</active>
    <description>Requires Account and Close Reason to be completed prior to Closing Case.  Account Name cannot contain &quot;TRION SOLUTIONS&quot; close a case.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status , &quot;Closed&quot;), 
OR(ISBLANK(TEXT(Reason)),
ISBLANK(AccountId),
CONTAINS(Account.Name,&quot;TRION SOLUTIONS&quot;)
))</errorConditionFormula>
    <errorMessage>Closing a case requires Account and Close Reason to be completed and the Account Name may not contain &quot;TRION SOLUTIONS&quot;</errorMessage>
</ValidationRule>