force-app/main/default/objects/Case/listViews/Accounting.listView-meta.xml
<ListView>
    <fullName>Accounting</fullName>
    <columns>Unread_Emails__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.EMAIL</columns>
    <filterScope>Queue</filterScope>
    <label>Accounting</label>
    <queue>Accounting</queue>
    <sharedTo>
        <group>Accounting</group>
    </sharedTo>
</ListView>