force-app/main/default/objects/Case/listViews/All_Cases_New.listView-meta.xml
<ListView>
    <fullName>All_Cases_New</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>Department__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>FileTest_Created_Date__c</columns>
    <columns>Created_Date_Status_Checker__c</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <label>All Cases</label>
</ListView>