force-app/main/default/objects/Case/listViews/All_Open_MIA_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_MIA_Cases</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>HRC</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>MIA</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>mia</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>All Open MIA Cases</label>
    <sharedTo>
        <group>Human_Resources</group>
    </sharedTo>
</ListView>