force-app/main/default/objects/Case/listViews/All_WC_Cases.listView-meta.xml
<ListView>
    <fullName>All_WC_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>WC</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All WC Cases</label>
</ListView>