force-app/main/default/objects/Case/listViews/Benefits.listView-meta.xml
<ListView>
    <fullName>Benefits</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Benefits</label>
    <queue>Benefits</queue>
    <sharedTo>
        <group>Benefits</group>
    </sharedTo>
</ListView>