force-app/main/default/objects/Case/listViews/Benefits_Open_Cases_by_Team_Member.listView-meta.xml
<ListView>
    <fullName>Benefits_Open_Cases_by_Team_Member</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>smyer,ddeba,smurr,mcare,lrodt,cdors,nchr,vlopei,mvia,jhrbal</value>
    </filters>
    <label>Benefits: Open Cases; Not owned by Queue</label>
    <sharedTo>
        <group>Benefits</group>
        <role>Customer_Service_Rep</role>
        <role>Trion_Executive</role>
    </sharedTo>
</ListView>