force-app/main/default/objects/Case/listViews/Benefits_Open_Cases_W_Owner.listView-meta.xml
<ListView>
    <fullName>Benefits_Open_Cases_W_Owner</fullName>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Case_Age_In_Business_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Benefits</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>notEqual</operation>
        <value>Benefits</value>
    </filters>
    <label>Benefits Open Cases W/Owner</label>
</ListView>