force-app/main/default/objects/Case/listViews/Customer_Service.listView-meta.xml
<ListView>
    <fullName>Customer_Service</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Customer Service</label>
    <queue>Customer_Service</queue>
    <sharedTo>
        <group>Customer_Service</group>
    </sharedTo>
</ListView>