force-app/main/default/objects/Case/listViews/Driveline_HR_Cases.listView-meta.xml
<ListView>
    <fullName>Driveline_HR_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Driveline</value>
    </filters>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>HRC</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Driveline HR Cases</label>
    <sharedTo>
        <group>Human_Resources</group>
    </sharedTo>
</ListView>