force-app/main/default/objects/Case/listViews/Garnishments_Case.listView-meta.xml
<ListView>
    <fullName>Garnishments_Case</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,In Progress,Waiting on Response,Reply Received,Reopened</value>
    </filters>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Email - Garnishments</value>
    </filters>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Garnishments</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Garnishments</value>
    </filters>
    <label>Garnishments</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>Garnishments</group>
    </sharedTo>
</ListView>