force-app/main/default/objects/Case/listViews/Handbooks.listView-meta.xml
<ListView>
    <fullName>Handbooks</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4)</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>HRC</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Mary Loridon</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Nicole Newberry</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Suzy Chaffin</value>
    </filters>
    <label>Handbooks</label>
    <sharedTo>
        <group>Human_Resources</group>
    </sharedTo>
</ListView>