force-app/main/default/objects/Case/listViews/Human_Resources.listView-meta.xml
<ListView>
    <fullName>Human_Resources</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>Human Resources</label>
    <queue>Human_Resources</queue>
    <sharedTo>
        <group>Human_Resources</group>
    </sharedTo>
</ListView>